<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/mint"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="350sp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/text_login"
            android:ems="10"
            android:hint="@string/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:minHeight="48dp"

            app:met_floatingLabel="normal"
            app:met_baseColor="@color/black"
            app:met_primaryColor="@color/light_purple"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/text_password"
            android:ems="10"
            android:hint="@string/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minHeight="48dp"

            app:met_floatingLabel="normal"
            app:met_baseColor="@color/black"
            app:met_primaryColor="@color/light_purple"
            />




        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:backgroundTint="@color/light_purple"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_margin="10sp"
            android:text="@string/app_new"
            android:textAlignment="center"
            android:textColor="@color/olive"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/light_purple"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/olive"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginTop="20sp"/>

</RelativeLayout>