<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="@color/mint"
        android:background="@color/white"
        android:padding="8dp">

        <TextView
            android:id="@+id/barcode_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Категорія"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Назва"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantity_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Кількість"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:background="@color/mint"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3sp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/log_in"
                app:elevation="0dp"
                app:fabSize="normal"
                app:srcCompat="@drawable/gear" />

            <TextView
                android:id="@+id/filter_text"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                android:text="Вибраний фільтр" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/email"
            app:backgroundTint="@color/light_purple"
            app:borderWidth="3dp"
            app:elevation="0dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/plus" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_field"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Пошук"
                android:textColor="@color/black"
                android:minHeight="48dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/password_text"
                app:elevation="0dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/img" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
